--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body{
     background-color: #c7bebe;
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
+    margin-top: 70px;
     margin-right: 500px;
     margin-left: 500px;
     border-radius: 20px;
@@ -114,4 +114,18 @@ body{
     display: flex;
     align-self: center;
     
+}
+
+.cadastro button{
+    width: 70%;
+    height: 40px;
+    background: rgb(228, 22, 22);
+    color: white;
+    border: 0;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: "Inter", sans-serif;
+    cursor: pointer;
+    transition: background 0.5s ease;
 }
