--- a/style.css
+++ b/style.css
@@ -130,3 +130,52 @@ body{
     cursor: pointer;
     transition: background 0.5s ease;
 }
+
+.login{
+    background-color: #c7bebe;
+    display: flex;
+    flex-direction: column;
+    margin-top: 70px;
+    margin-right: 500px;
+    margin-left: 500px;
+    border-radius: 20px;
+    padding-bottom: 50px;
+    padding-top: 20px;
+    align-items: center;
+}
+
+.login h1{
+    align-self: center;
+    color: rgb(228, 22, 22);
+    margin: 0px;
+}
+
+.login hr{
+    height: 10px;
+    color: rgb(228, 22, 22);
+}
+
+.login input{
+    width: 70%;
+    height: 35px;
+    border: 0;
+    border-radius: 10px;
+    padding-left: 15px;
+    font-weight: 700;
+    font-family: "Inter", sans-serif;
+    margin-bottom: 10px;
+}
+
+.login button{
+    width: 70%;
+    height: 40px;
+    background: rgb(228, 22, 22);
+    color: white;
+    border: 0;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: "Inter", sans-serif;
+    cursor: pointer;
+    transition: background 0.5s ease;
+}
