--- a/Site/style.css
+++ b/Site/style.css
@@ -117,7 +117,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-self: center;
-    background-color: yellow;
+    color: rgb(73, 69, 69);
+    background: linear-gradient(90deg, #c7bebe 0%, #f8f6f6 100%);
     border-radius: 20px;
     border: 0;
     cursor: pointer;
@@ -140,13 +141,15 @@ body{
 }
 
 .escolha_frente h1{
-    color: yellow;
+    color: rgb(228, 22, 22);
     font-size: 25px;
     font-weight: 800;
     text-align: center;
 }
 
 .escolha_frente select{
+    background: linear-gradient(90deg, #c7bebe 0%, #f8f6f6 100%);
+    color: rgb(73, 69, 69);
     text-align: center;
     font-size: 18px;
     font-weight: 800;
@@ -164,13 +167,15 @@ body{
 }
 
 .escolha_tras h1{
-    color: yellow;
+    color: rgb(228, 22, 22);
     font-size: 25px;
     font-weight: 800;
     text-align: center;
 }
 
 .escolha_tras select{
+    color: rgb(73, 69, 69);
+    background: linear-gradient(90deg, #c7bebe 0%, #f8f6f6 100%);
     text-align: center;
     font-size: 18px;
     font-weight: 800;
