--- a/Site/style.css
+++ b/Site/style.css
@@ -187,6 +187,17 @@ body{
     outline: none;
 }
 
+.musculo_destaque_off{
+    display: none;
+}
+
+.musculo_destaque_on{
+    display: flex;
+    justify-self: center;
+    justify-content: center;
+    max-width: 50%;
+}
+
 /* CADASTRO */
 
 .cadastro{
