Atualizando a lógica com o JP

--- a/Site/style.css
+++ b/Site/style.css
@@ -199,11 +199,26 @@ body{
     outline: none;
 }
 
-.musculo_destaque_off{
+.musculo_destaque_frente_off{
     display: none;
 }
 
-.musculo_destaque_on{
+.musculo_destaque_frente_on{
+    display: flex;
+    justify-self: center;
+    justify-content: center;
+    max-width: 50%;
+}
+
+.musculo_destaque_tras_off{
+    display: none;
+}
+
+.off {
+    display: none;
+}
+
+.musculo_destaque_tras_on{
     display: flex;
     justify-self: center;
     justify-content: center;
