Modifiquei o código do js, para unificar os músculos e não ter mais problemas com a opção de virar o corpo, e terminei os músculos de latissimo e romboides

--- a/Site/style.css
+++ b/Site/style.css
@@ -199,30 +199,15 @@ body{
     outline: none;
 }
 
-.musculo_destaque_frente_off{
-    display: none;
-}
-
-.musculo_destaque_frente_on{
+.on{
     display: flex;
     justify-self: center;
     justify-content: center;
     max-width: 50%;
-}
-
-.musculo_destaque_tras_off{
-    display: none;
 }
 
 .off {
     display: none;
-}
-
-.musculo_destaque_tras_on{
-    display: flex;
-    justify-self: center;
-    justify-content: center;
-    max-width: 50%;
 }
 
 /* CADASTRO */
