--- a/public/style.css
+++ b/public/style.css
@@ -229,6 +229,8 @@ label {
 .treino{
     display: none;
     justify-content: center;
+    justify-content: space-between;
+    flex-direction: column;
     background: linear-gradient(90deg, #c7bebe 0%, #f8f6f6 100%);
     border: 5px rgb(184, 6, 6) solid;
     border-radius: 20px;
@@ -245,6 +247,25 @@ label {
     font-size: 25px;
     font-weight: 800;
     text-align: center;
+}
+
+.treino h2{
+    text-align: center;
+    font-weight: bolder;
+    font-size:medium;
+    color: #d81717;
+}
+
+.sv_treino{
+    align-self: center;
+    background-color: rgb(255, 255, 31);
+    border: 0;
+    border-radius: 20px;
+    width: 70%;
+    height: 30px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-size: medium;
 }
 
 .escolha_frente select{
